# HumanCollaboraitonSystem

./: README.md
CRAIN-X7/discharge_position_detect/: package.xml
CRAIN-X7/discharge_position_detect/scripts/: DischargePositionDetectionModule.py
CRAIN-X7/discharge_position_detect/srv/: DischargePositionDetectionResult.srv
CRAIN-X7/human_collaboration/scripts/: EnumerateModule.py  HumanCollaborationCommunicationModule.py  HumanCollaborationModule.py  HumanCollaborationStateModule.py  HumanCollaborationToolModule.py  HumanCollaborationUserDefineModule.py  MovePlannerModule.py
CRAIN-X7/peripheral_environment_detection/msg/: SetupResult.msg
CRAIN-X7/system_management/: CMakeLists.txt
CRAIN-X7/system_management/msg/: TaskCommandId.msg  TaskCommandInterveEnd.msg  TaskResult.msg
CRAIN-X7/system_management/scripts/: SystemManagementNode.py
CRAIN-X7/system_management/srv/: SystemManagement.srv  SystemManagementState.srv
CRAIN-X7/work_detection/: CMakeLists.txt
CRAIN-X7/work_detection/scripts/: WorkDetectionNode.py
CRAIN-X7/work_detection/srv/: WorkDetection.srv
CRAIN-X7/ws_recogneze/: package.xml
MOTOMAN/discharge_position_detect/msg/: DischargePositionDetectionResult.msg
MOTOMAN/discharge_position_detect/srv/: DetectDischargePosition.srv
MOTOMAN/human_collaboration/: CMakeLists.txt
MOTOMAN/peripheral_environment_detection/: package.xml
MOTOMAN/system_management/: package.xml
MOTOMAN/work_detection/: package.xml
Seed-noid/peripheral_environment_detection/: CMakeLists.txt
Skeleton/discharge_position_detect/: CMakeLists.txt
(+42 files in other folders)
